--- a/order.html
+++ b/order.html
@@ -49,7 +49,7 @@
           class="md:ml-auto flex flex-wrap items-center text-base justify-center"
         >
           <a
-            href="/"
+            href="#"
             class="mr-5 text-gray-900 border-b-2 border-transparent hover:border-gray-900"
             >Home</a
           >
